facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_short_on_positional.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: #[facet(args::positional)] is not compatible with #[facet(args::short)]
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct ShortOnPositional {
   │        ────────┬────────  
   │                ╰────────── defined at facet-args/src/schema/tests.rs:102
   │ 
 4 │     value: String,
   │     ──────┬──────  
   │           ╰──────── has both attributes
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
